<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".GetSmsTxtActivity" >
<ViewFlipper android:id="@+id/details"  
       android:layout_width="fill_parent"    
       android:layout_height="fill_parent"  
       android:persistentDrawingCache="animation"  
       android:flipInterval="1000"  
       android:background="@android:color/background_dark"
       android:inAnimation="@anim/push_left_in"  
	   android:outAnimation="@anim/push_left_out"  > 
	<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/floor_03"   >
    <TextView
        android:id="@+id/info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="50dip"
        android:layout_marginTop="20dip"
        android:textColor="#000000"
        android:textSize="10pt" />
    <Button 
        android:id="@+id/send"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_centerInParent="true"
        android:textSize="10pt"
        android:background="@drawable/frombutton"
        android:text="@string/send"/>
    <Button 
        android:id="@+id/from"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_above="@id/send"
        android:layout_marginBottom="10dip"
        android:textSize="10pt"
        android:background="@drawable/frombutton"
        android:text="@string/from"/>
    <Button 
        android:id="@+id/all"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_below="@id/send"
        android:layout_marginTop="10dip"
        android:textSize="10pt"
        android:background="@drawable/frombutton"
        android:text="@string/all"/>
    </RelativeLayout>
    
	<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/floor_03"   >
    <TextView 
         android:id="@+id/text_select"
         android:layout_marginTop="50dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/seclect_text"
        android:textColor="@android:color/background_dark"
        android:textSize="16.0sp"/>
    <TextView 
         android:id="@+id/text_info"
         android:layout_marginTop="10dip"
         android:layout_below="@id/text_select"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/background_dark"
        android:text="这里是选择信息"
        android:textSize="16.0sp"/>
    <ImageButton 
        android:layout_toRightOf="@id/text_info"
        android:layout_width="50dip"
        android:layout_height="50dip"
        android:id="@+id/select_button"
        android:src="@drawable/ic_launcher"
        />
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_check"
        android:layout_marginTop="10dip"
        android:layout_below="@id/text_info"
        android:text="@string/check_text"
        android:textColor="@android:color/background_dark"
        android:textSize="16.0sp"/>
    <CheckBox
	android:id="@+id/check_date"
	android:layout_marginTop="10dip"
	android:textSize="16.0sp"
	android:textColor="#ff222222"
	android:paddingLeft="25.0px"
	android:layout_marginLeft="80dip"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:checked="false"
	android:layout_below="@id/text_check"
	android:button="@drawable/qq_btn_check"
	android:text="@string/datesort"/>
    <CheckBox
	android:id="@+id/check_chat"
	android:layout_marginTop="10dip"
	android:textSize="16.0sp"
	android:textColor="#ff222222"
	android:paddingLeft="25.0px"
	android:layout_marginLeft="80dip"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:checked="true"
	android:layout_below="@id/check_date"
	android:button="@drawable/qq_btn_check"
	android:text="@string/chatsort"/>
    <TextView 
        android:id="@+id/path_textview"
        android:layout_below="@id/check_chat"
        android:layout_marginTop="10dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="16.0sp"
        android:textColor="@android:color/background_dark"
        android:text="@string/path_text"/>
    <EditText 
        android:id="@+id/path_edit"
        android:layout_marginTop="10dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/path_textview"/>
    
    <Button 
        android:id="@+id/return_button"
        android:layout_marginLeft="10dip"
        android:layout_width="80dip"
        android:layout_alignParentBottom="true"
        android:layout_height="50dip"
        android:layout_marginBottom="50dip"/>
     <Button 
        android:id="@+id/preread_button"
        android:layout_marginRight="10dip"
         android:layout_marginBottom="50dip"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
        android:layout_width="80dip"
        android:layout_height="50dip"/>
    <Button 
        android:id="@+id/ok_button"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/return_button"
        android:layout_marginRight="10dip"
        android:layout_toLeftOf="@id/preread_button"
        android:layout_marginLeft="10dip"
         android:layout_marginBottom="50dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
   
    
     </RelativeLayout>
 </ViewFlipper>   
</RelativeLayout>